# wgpu-practice

./: .gitignore  Cargo.toml  README.md
crates/wpr-gltf/: Cargo.toml  build.rs
crates/wpr-gltf/src/: loader.rs
crates/wpr-render/: Cargo.toml
crates/wpr-render/src/: app.rs  lib.rs  main.rs  run.rs  state.rs
crates/wpr-render/src/shader/: shader.rs
crates/wpr-utils/: Cargo.toml
crates/wpr-utils/src/: git.rs  lib.rs
wpr-viewer/: README.md  index.html  package-lock.json  package.json  vite.config.ts
wpr-viewer/src/: App.vue
wpr-viewer/src/render/: render.ts
wpr-viewer/src/wasm/: wpr_render.d.ts  wpr_render.js  wpr_render_bg.js  wpr_render_bg.wasm  wpr_render_bg.wasm.d.ts
